# python_btc_18

./: README.md  exemplo_01.py  pokemon.db  pyproject.toml
src/: controller.py  db.py  main.py  models.py  pokemon.db  schema.py
